Add file, elfutils, libdw dependency
Change-Id: I57c58c24806fdb32f6fe0474444017c5c0113bf6
Signed-off-by: Yunjin Lee <yunjin-.lee@samsung.com>

--- a/test/utils/CMakeLists.txt
+++ b/test/utils/CMakeLists.txt
@@ -1,10 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 #INSTALL UTIL FOR ASLR/DEP TEST
-file(GLOB TESTUTILS "${CMAKE_SOURCE_DIR}/test/utils/${ARCH}/*")
+#file(GLOB TESTUTILS "${CMAKE_SOURCE_DIR}/test/utils/${ARCH}/*")
 INSTALL(FILES
 	_sh_util_lib
-	${TESTUTILS}
+#	${TESTUTILS}
 	DESTINATION
 	/usr/share/security-config/test/utils
 )
