Add rule path and apply exception lists for smackrule_saved test
Change-Id: Iea0b4372761b4811a1bc488359e4f8f6c857b723

--- a/test/smack_rule_test/CMakeLists.txt
+++ b/test/smack_rule_test/CMakeLists.txt
@@ -5,6 +5,7 @@ INSTALL(FILES
           ${SHELL_SCRIPT}
 		smacklabel_exception.list
 		smackrule_exception.list
+		smackrule_exception_saved.list
           DESTINATION
           /usr/share/security-config/test/smack_rule_test
 )
