Modify not to install aslr/dep test
Change-Id: I1001bc5017b474dcc7732aebcf7dd5fb6a3a9666
Signed-off-by: Yunjin Lee <yunjin-.lee@samsung.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 ADD_SUBDIRECTORY(utils)
-ADD_SUBDIRECTORY(aslr_test)
-ADD_SUBDIRECTORY(dep_test)
+#ADD_SUBDIRECTORY(aslr_test)    #This test is not included in image.
+#ADD_SUBDIRECTORY(dep_test)     #This test is not included in image.
 ADD_SUBDIRECTORY(setuid_test)
 ADD_SUBDIRECTORY(path_check_test)
 ADD_SUBDIRECTORY(capability_test)
