Add 64bit build configuration about root minimization test
Change-Id: I8833361c1dc0e6eba690e86e3e1eda2791520e94
Signed-off-by: Seongwook Chung <seong.chung@samsung.com>

--- a/test/root_test/CMakeLists.txt
+++ b/test/root_test/CMakeLists.txt
@@ -7,7 +7,19 @@ IF("${ARCH}" STREQUAL "arm")
 	ELSEIF("${PROFILE}" STREQUAL "wearable")
 		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/*")
 	ENDIF()
+ELSEIF("${ARCH}" STREQUAL "aarch64")
+	IF("${PROFILE}" STREQUAL "mobile")
+		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/*")
+	ELSEIF("${PROFILE}" STREQUAL "wearable")
+		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/*")
+	ENDIF()
 ELSEIF("${ARCH}" STREQUAL "i386")
+	IF("${PROFILE}" STREQUAL "mobile")
+		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/*")
+	ELSEIF("${PROFILE}" STREQUAL "wearable")
+		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/wearable/*")
+	ENDIF()
+ELSEIF("${ARCH}" STREQUAL "x86_64")
 	IF("${PROFILE}" STREQUAL "mobile")
 		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/*")
 	ELSEIF("${PROFILE}" STREQUAL "wearable")
