Modify path check script. It will check whether PATH variant is set properly in each scripts.
Change-Id: I09727d84eab43b9377260e00318ea5e9433ddab7

--- a/test/path_check_test/CMakeLists.txt
+++ b/test/path_check_test/CMakeLists.txt
@@ -3,6 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 FILE(GLOB SHELL_SCRIPT *.sh)
 INSTALL(FILES
           ${SHELL_SCRIPT}
+          path_exception.list
           DESTINATION
           /usr/share/security-config/test/path_check_test
 )
