--- a/test/root_test/CMakeLists.txt
+++ b/test/root_test/CMakeLists.txt
@@ -3,32 +3,49 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 FILE(GLOB SHELL_SCRIPT *.sh)
 IF("${ARCH}" STREQUAL "arm")
 	IF("${PROFILE}" STREQUAL "mobile")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/*")
+		FILE(GLOB EXCEPTION_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/exception_list")
+		FILE(GLOB NON_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/non_daemon_list")
+		FILE(GLOB NON_ROOT_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/non_root_list")
+		FILE(GLOB ROOT_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/root_daemon_list")
 	ELSEIF("${PROFILE}" STREQUAL "wearable")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/*")
+		FILE(GLOB EXCEPTION_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/exception_list")
+		FILE(GLOB NON_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/non_daemon_list")
+		FILE(GLOB NON_ROOT_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/non_root_list")
+		FILE(GLOB ROOT_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/root_daemon_list")
 	ENDIF()
 ELSEIF("${ARCH}" STREQUAL "aarch64")
 	IF("${PROFILE}" STREQUAL "mobile")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/*")
-	ELSEIF("${PROFILE}" STREQUAL "wearable")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/wearable/*")
+		FILE(GLOB EXCEPTION_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/exception_list")
+		FILE(GLOB NON_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/non_daemon_list")
+		FILE(GLOB NON_ROOT_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/non_root_list")
+		FILE(GLOB ROOT_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/target/mobile/root_daemon_list")
 	ENDIF()
 ELSEIF("${ARCH}" STREQUAL "i386")
 	IF("${PROFILE}" STREQUAL "mobile")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/*")
+		FILE(GLOB EXCEPTION_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/exception_list")
+		FILE(GLOB NON_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/non_daemon_list")
+		FILE(GLOB NON_ROOT_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/non_root_list")
+		FILE(GLOB ROOT_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/root_daemon_list")
 	ELSEIF("${PROFILE}" STREQUAL "wearable")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/wearable/*")
+		FILE(GLOB EXCEPTION_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/wearable/exception_list")
+		FILE(GLOB NON_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/wearable/non_daemon_list")
+		FILE(GLOB NON_ROOT_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/wearable/non_root_list")
+		FILE(GLOB ROOT_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/wearable/root_daemon_list")
 	ENDIF()
 ELSEIF("${ARCH}" STREQUAL "x86_64")
 	IF("${PROFILE}" STREQUAL "mobile")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/*")
-	ELSEIF("${PROFILE}" STREQUAL "wearable")
-		FILE(GLOB LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/wearable/*")
+		FILE(GLOB EXCEPTION_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/exception_list")
+		FILE(GLOB NON_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/non_daemon_list")
+		FILE(GLOB NON_ROOT_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/non_root_list")
+		FILE(GLOB ROOT_DAEMON_LIST "${CMAKE_SOURCE_DIR}/test/root_test/list/emul/mobile/root_daemon_list")
 	ENDIF()
 ENDIF()
 INSTALL(FILES
-		${SHELL_SCRIPT}
-       		${LIST}
+	${SHELL_SCRIPT}
+       	${EXCEPTION_LIST}
+       	${NON_DAEMON_LIST}
+       	${NON_ROOT_LIST}
+       	${ROOT_DAEMON_LIST}
 	DESTINATION
         /usr/share/security-config/test/root_test
 )
