Install smack_default_labeling - It sets smack label for the specific folder. - It is executed by security-config.service
Change-Id: Ica179a7282bd18978ba22f8ad477a664106ceb84

--- a/systemd/security-config.service
+++ b/systemd/security-config.service
@@ -3,7 +3,7 @@ Description=security-config service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/chsmack -r -a "_" /csa
+ExecStart=/usr/share/security-config/smack_default_labeling
 
 [Install]
 WantedBy=multi-user.target
