Fix build error in 64 bit profiles.
Change-Id: Ie661d328205ce1dd41991632a7b45647d69dd5cb

--- a/systemd/CMakeLists.txt
+++ b/systemd/CMakeLists.txt
@@ -1,6 +1,6 @@
 INSTALL(FILES
     ${CMAKE_SOURCE_DIR}/systemd/security-config.service
     DESTINATION
-    ${SYSTEMD_UNIT_DIR}
+    ${SYSTEMD_INSTALL_DIR}
 )
 
