--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,24 +14,23 @@ INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/set_capability DESTINATION /usr/share/s
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/security-config.conf DESTINATION /usr/lib/tmpfiles.d/)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/90_user-content-permissions.post DESTINATION ${SYSCONF_INSTALL_DIR}/gumd/useradd.d)
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/91_user-dbspace-permissions.post DESTINATION ${SYSCONF_INSTALL_DIR}/gumd/useradd.d)
+
+IF("${PROFILE}" STREQUAL "mobile" OR "${PROFILE}" STREQUAL "wearable")
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/smack/onlycap DESTINATION /etc/smack)
-IF(NOT "${PROFILE}" STREQUAL "tv")
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/smack/smack_default_labeling DESTINATION /usr/share/security-config)
 ENDIF()
 
-IF("${ARCH}" STREQUAL "arm" OR "${ARCH}" STREQUAL "aarch64")
-    IF("${PROFILE}" STREQUAL "mobile")
-        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/mobile/service_daemon_list DESTINATION /usr/share/security-config)
-    ELSEIF("${PROFILE}" STREQUAL "wearable")
-        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/wearable/service_daemon_list DESTINATION /usr/share/security-config)
-    ENDIF()
-ENDIF()
-
-IF("${ARCH}" STREQUAL "i386" OR "${ARCH}" STREQUAL "x86_64")
+IF("${EMULATOR}" STREQUAL "emulator")
     IF("${PROFILE}" STREQUAL "mobile")
         INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/emulator/mobile/service_daemon_list DESTINATION /usr/share/security-config)
     ELSEIF("${PROFILE}" STREQUAL "wearable")
         INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/emulator/wearable/service_daemon_list DESTINATION /usr/share/security-config)
+    ENDIF()
+ELSEIF(NOT "${EMULATOR}" STREQUAL "emulator")
+    IF("${PROFILE}" STREQUAL "mobile")
+        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/mobile/service_daemon_list DESTINATION /usr/share/security-config)
+    ELSEIF("${PROFILE}" STREQUAL "wearable")
+        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/wearable/service_daemon_list DESTINATION /usr/share/security-config)
     ENDIF()
 ENDIF()
 
@@ -42,6 +41,6 @@ INSTALL(FILES
 )
 
 ADD_SUBDIRECTORY(test)
-IF(NOT "${PROFILE}" STREQUAL "tv")
+IF("${PROFILE}" STREQUAL "mobile" OR "${PROFILE}" STREQUAL "wearable")
 ADD_SUBDIRECTORY(systemd)
 ENDIF()
