--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,14 +23,18 @@ ENDIF()
 IF("${ARCH}" STREQUAL "i386" OR "${ARCH}" STREQUAL "x86_64")
     IF("${PROFILE}" STREQUAL "mobile")
         INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/emulator/mobile/service_daemon_list DESTINATION /usr/share/security-config)
+        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/emulator/mobile/admin_service_daemon_list DESTINATION /usr/share/security-config)
     ELSEIF("${PROFILE}" STREQUAL "wearable")
         INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/emulator/wearable/service_daemon_list DESTINATION /usr/share/security-config)
+        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/emulator/wearable/admin_service_daemon_list DESTINATION /usr/share/security-config)
     ENDIF()
 ELSE("${ARCH}" STREQUAL "i386" OR "${ARCH}" STREQUAL "x86_64")
     IF("${PROFILE}" STREQUAL "mobile")
         INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/mobile/service_daemon_list DESTINATION /usr/share/security-config)
+        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/mobile/admin_service_daemon_list DESTINATION /usr/share/security-config)
     ELSEIF("${PROFILE}" STREQUAL "wearable")
         INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/wearable/service_daemon_list DESTINATION /usr/share/security-config)
+        INSTALL(FILES ${CMAKE_SOURCE_DIR}/config/service_list/target/wearable/admin_service_daemon_list DESTINATION /usr/share/security-config)
     ENDIF()
 ENDIF()
 
