--- a/systemd/security-config.service
+++ b/systemd/security-config.service
@@ -4,6 +4,7 @@ Description=security-config service
 [Service]
 Type=simple
 ExecStart=/usr/share/security-config/smack_default_labeling
+SmackProcessLabel=System::Privileged
 
 [Install]
 WantedBy=multi-user.target
